<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenMainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bg_desc"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/open_group_display_no_gradient_activity" />

    <Button
        android:id="@+id/openActivityButton"
        android:layout_width="340dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/spacegrotesksemibold"
        android:text="@string/button_name"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textColorHighlight="#3F3F3F"
        android:textColorLink="@color/dark"
        android:textSize="@dimen/heading3"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="340dp"
        android:layout_height="124dp"
        android:fontFamily="@font/spacegroteskregular"
        android:text="@string/trivia"
        android:textColor="@color/white"
        android:textSize="@dimen/trivia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.884" />
</androidx.constraintlayout.widget.ConstraintLayout>
