<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToastActivity">
<!--    android:background="@drawable/toast"-->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/bg_desc"
        app:srcCompat="@drawable/toast"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="174dp" />

<!--    <TextView-->
<!--        android:id="@+id/textView10"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:fontFamily="@font/spacegroteskbold"-->
<!--        android:text="@string/toast_header_text"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="@dimen/toast_header_text"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.239" />-->

    <Button
        android:id="@+id/incrementNumber"
        android:layout_width="200dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/spacegrotesksemibold"
        android:text="@string/increment_button"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textSize="@dimen/heading3"
        android:textColorHighlight="#3F3F3F"
        android:textColorLink="@color/dark"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <TextView
        android:id="@+id/toast_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_number"
        android:textSize="@dimen/toast_number"
        android:textColor="@color/white"
        android:fontFamily="@font/spacegroteskbold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414" />

    <Button
        android:id="@+id/toastButton"
        android:layout_width="200dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:fontFamily="@font/spacegroteskbold"
        android:textSize="@dimen/heading3"
        android:text="@string/toast_header_text"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />


</androidx.constraintlayout.widget.ConstraintLayout>